--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -1,4 +1,4 @@
-div.col-md-9 h1:first-of-type {
+/* div.col-md-9 h1:first-of-type {
     text-align: center;
     font-size: 60px;
     font-weight: 300;
@@ -31,7 +31,7 @@ div.admonition.block>.admonition-title {
     border-color: #d8dcf0;
 }
 
-/* Definition List styles */
+Definition List styles
 
 dd {
     padding-left: 20px;
@@ -43,7 +43,7 @@ dd {
     height: auto;
 }
 
-/* Homepage */
+/* Homepage
 
 body.homepage div.jumbotron {
     margin-top: 1.5rem;
@@ -110,9 +110,3 @@ h5.doc-heading {
     width: 100%;
     border: none;
   }
-
-  /*.md-grid {
-    max-width: 700px; 
-  
-  
-  }*/
