add blog post, re enable giscus

--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -2,10 +2,10 @@
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
 
   <script src="https://giscus.app/client.js"
-  data-repo="zeulewan/marswebsite"
-  data-repo-id="R_kgDOLD7jOQ"
-  data-category="General"
-  data-category-id="DIC_kwDOLD7jOc4CceSo"
+  data-repo="marstmu/marswebsite"
+  data-repo-id="R_kgDOLL14UQ"
+  data-category="_"
+  data-category-id="DIC_kwDOLL14Uc4Cc03b"
   data-mapping="pathname"
   data-strict="0"
   data-reactions-enabled="1"
