Fix image tag syntax error in gallery section

--- a/overrides/partials/index.html
+++ b/overrides/partials/index.html
@@ -294,7 +294,7 @@
       <img src="assets/images/zn.png" alt="Photo 2" class="vertical-photo" loading="lazy">
       <img src="assets/images/6.png" alt="Photo 2" class="vertical-photo" loading="lazy">
       <img src="assets/images/2.jpg" alt="Photo 2" class="vertical-photo" loading="lazy">
-      <img src="assets/images/15 <img src="assets/images/15.png" alt="Photo 3" class="vertical-photo" loading="lazy">
+      <img src="assets/images/15.png" alt="Photo 3" class="vertical-photo" loading="lazy">
     </div>
     <div class="about-section">
       <h2>About Us</h2>
