Update gallery section background gradient for improved aesthetics

--- a/overrides/partials/index.html
+++ b/overrides/partials/index.html
@@ -145,7 +145,7 @@
       margin-top: 100vh;
       padding: 2rem 0;
       background-color: #080202;
-      background: linear-gradient(45deg, #390f0f, #340303);
+      background: linear-gradient(45deg, #4e0101, #56004d);
       z-index: 10;
     }
     .vertical-photos {
